Added Smooth Scroll Behaviour.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,27 @@
 
     --cursor-color: white;
 }
+
+html.lenis, html.lenis body {
+    height: auto;
+  }
+  
+  .lenis.lenis-smooth {
+    scroll-behavior: auto !important;
+  }
+  
+  .lenis.lenis-smooth [data-lenis-prevent] {
+    overscroll-behavior: contain;
+  }
+  
+  .lenis.lenis-stopped {
+    overflow: hidden;
+  }
+  
+  .lenis.lenis-scrolling iframe {
+    pointer-events: none;
+  }
+
 .hidden{
     filter: blur(5px);
     transform: translateY(0);
